<resources>
    <string name="app_name">Legenda Dunia</string>
    <string name="bio">\"Sukseslah dengan cara yang berkualitas\"</string>
    <string name="profile">Profile</string>
    <string name="info">Info</string>
    <string name="ok">OK</string>
    <string name="desc_app">Halo semua, ini adalah aplikasi untuk menampilkan pemain sepak bola terbaik di dunia.</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="personality">Personality</string>
    <string name="references">References</string>
    <string name="link_github">Github</string>
    <string name="email">bagustofan@yahoo.com</string>
    <string name="nama">Tofan Bagus Apriyanto</string>
    <string name="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="kelahiran">Kelahiran</string>
    <string name="kebangsaan">Kebangsaan</string>
    <string name="gaji">Gaji</string>
    <string name="tim">Tim</string>
    <string name="data_kelahiran">24 Juni 1987 (usia 35 tahun)</string>
    <string name="data_kebangsaan">Argentina, Italia, Spanyol</string>
    <string name="data_gaji">41 juta USD (2022)</string>
    <string name="data_tim">Paris Saint-Germain F.C. (#30 / Penyerang), Tim nasional sepak bola Argentina (#10 / Penyerang)</string>
</resources>