<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/actionShare"
        app:tint="@color/white"
        app:borderWidth="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:src="@drawable/icon_share"
        android:backgroundTint="@color/colorPrimary"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:translationZ="1dp"
                android:layout_marginTop="28dp"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="@color/colorPrimary"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"/>

            <View
                android:id="@+id/detailBackground"
                android:layout_width="match_parent"
                android:layout_height="420dp"
                tools:background="@color/colorPrimary"/>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginStart="10dp"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingEnd="12dp">

                    <TextView
                        android:id="@+id/detailName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semibold"
                        android:gravity="center"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        tools:background="@color/colorPrimary"
                        tools:text="Messi" />

                    <RelativeLayout
                        android:id="@+id/relativeLayout"
                        android:layout_width="match_parent"
                        android:layout_height="400dp">

                        <ImageView
                            android:id="@+id/detailPhoto"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="8dp"
                            android:scaleType="fitCenter"
                            tools:src="@drawable/neymar" />

                    </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="12dp"
                android:layout_marginBottom="60dp"
                android:layout_below="@id/linearLayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deskripsi"
                    android:layout_marginTop="8dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_bold"/>

                <TextView
                    android:id="@+id/detailDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/poppins_regular"
                    tools:text="@string/desc"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kelahiran"
                    android:textSize="18sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_bold"/>

                <TextView
                    android:id="@+id/detailKelahiran"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/poppins_regular"
                    tools:text="@string/data_kelahiran"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kebangsaan"
                    android:textSize="18sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_bold"/>

                <TextView
                    android:id="@+id/detailKebangsaan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/poppins_regular"
                    tools:text="@string/data_kebangsaan"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gaji"
                    android:textSize="18sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_bold"/>

                <TextView
                    android:id="@+id/detailGaji"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/poppins_regular"
                    tools:text="@string/data_gaji"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tim"
                    android:textSize="18sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_bold"/>


                <TextView
                    android:id="@+id/detailTIm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/poppins_regular"
                    tools:text="@string/data_tim"/>


            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>